zerocopy-derive/tests/ui-nightly/union.stderr
error: unsupported on types with type parameters
  --> tests/ui-nightly/union.rs:35:10
   |
35 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-nightly/union.rs:51:10
   |
51 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-nightly/union.rs:58:10
   |
58 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive `Unaligned` on type with alignment greater than 1
  --> tests/ui-nightly/union.rs:71:11
   |
71 | #[repr(C, align(2))]
   |           ^^^^^^^^

error: this conflicts with another representation hint
  --> tests/ui-nightly/union.rs:88:8
   |
88 | #[repr(packed, align(2))]
   |        ^^^^^^^^^^^^^^^^

error: this conflicts with another representation hint
  --> tests/ui-nightly/union.rs:95:8
   |
95 | #[repr(align(1), align(2))]
   |        ^^^^^^^^^^^^^^^^^^

error: this conflicts with another representation hint
   --> tests/ui-nightly/union.rs:102:8
    |
102 | #[repr(align(2), align(4))]
    |        ^^^^^^^^^^^^^^^^^^

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-nightly/union.rs:107:10
    |
107 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-nightly/union.rs:114:10
    |
114 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition name: `zerocopy_derive_union_into_bytes`
  --> tests/ui-nightly/union.rs:42:10
   |
42 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `IntoBytes` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `IntoBytes` may come from an old version of the `zerocopy_derive` crate, try updating your dependency with `cargo update -p zerocopy_derive`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<()>: zerocopy_renamed::Immutable` is not satisfied
  --> tests/ui-nightly/union.rs:25:10
   |
25 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `zerocopy_renamed::Immutable` is not implemented for `UnsafeCell<()>`
   |
   = note: Consider adding `#[derive(Immutable)]` to `UnsafeCell<()>`
   = help: the following other types implement trait `zerocopy_renamed::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
             (A, B, C, D, E, F, G, H, I)
             (A, B, C, D, E, F, G, H, I, J)
             (A, B, C, D, E, F, G, H, I, J, K)
             (A, B, C, D, E, F, G, H, I, J, K, L)
             (A, B, C, D, E, F, G, H, I, J, K, L, M)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z)
             (A,)
             *const T
             *mut T
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Immutable1
             Isize<O>
             ManuallyDrop<T>
             MaybeUninit<T>
             NonNull<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<T>
             Option<extern "C" fn() -> M>
             Option<extern "C" fn(A, B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(C, D, E, F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(D, E, F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(E, F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(F, G, H, I, J, K, L) -> M>
             Option<extern "C" fn(G, H, I, J, K, L) -> M>
             Option<extern "C" fn(H, I, J, K, L) -> M>
             Option<extern "C" fn(I, J, K, L) -> M>
             Option<extern "C" fn(J, K, L) -> M>
             Option<extern "C" fn(K, L) -> M>
             Option<extern "C" fn(L) -> M>
             Option<fn() -> M>
             Option<fn(A, B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<fn(B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<fn(C, D, E, F, G, H, I, J, K, L) -> M>
             Option<fn(D, E, F, G, H, I, J, K, L) -> M>
             Option<fn(E, F, G, H, I, J, K, L) -> M>
             Option<fn(F, G, H, I, J, K, L) -> M>
             Option<fn(G, H, I, J, K, L) -> M>
             Option<fn(H, I, J, K, L) -> M>
             Option<fn(I, J, K, L) -> M>
             Option<fn(J, K, L) -> M>
             Option<fn(K, L) -> M>
             Option<fn(L) -> M>
             Option<unsafe extern "C" fn() -> M>
             Option<unsafe extern "C" fn(A, B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(E, F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(F, G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(G, H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(H, I, J, K, L) -> M>
             Option<unsafe extern "C" fn(I, J, K, L) -> M>
             Option<unsafe extern "C" fn(J, K, L) -> M>
             Option<unsafe extern "C" fn(K, L) -> M>
             Option<unsafe extern "C" fn(L) -> M>
             Option<unsafe fn() -> M>
             Option<unsafe fn(A, B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(B, C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(C, D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(D, E, F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(E, F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(F, G, H, I, J, K, L) -> M>
             Option<unsafe fn(G, H, I, J, K, L) -> M>
             Option<unsafe fn(H, I, J, K, L) -> M>
             Option<unsafe fn(I, J, K, L) -> M>
             Option<unsafe fn(J, K, L) -> M>
             Option<unsafe fn(K, L) -> M>
             Option<unsafe fn(L) -> M>
             PhantomData<T>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
             zerocopy_renamed::ReadOnly<T>
   = note: required for `ManuallyDrop<UnsafeCell<()>>` to implement `zerocopy_renamed::Immutable`
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 9 + #![feature(trivial_bounds)]
   |

error[E0277]: `IntoBytes2` has 1 total byte(s) of padding
  --> tests/ui-nightly/union.rs:42:10
   |
42 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ types with padding cannot implement `IntoBytes`
   |
   = note: consider using `zerocopy::Unalign` to lower the alignment of individual fields
   = note: consider adding explicit fields where padding would be
   = note: consider using `#[repr(packed)]` to remove padding
help: the trait `PaddingFree<IntoBytes2, 1>` is not implemented for `()`
      but trait `PaddingFree<IntoBytes2, 0>` is implemented for it
  --> $WORKSPACE/src/util/macro_util.rs
   |
   | impl<T: ?Sized> PaddingFree<T, 0> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 9 + #![feature(trivial_bounds)]
   |

error[E0587]: type has conflicting packed and align representation hints
  --> tests/ui-nightly/union.rs:89:1
   |
89 | union Unaligned3 {
   | ^^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
   --> tests/ui-nightly/union.rs:117:1
    |
117 | union Unaligned7 {
    | ^^^^^^^^^^^^^^^^
    |
note: `AU16` has a `#[repr(align)]` attribute
   --> tests/ui-nightly/../include.rs
    |
 64 |     pub struct AU16(pub u16);
    |     ^^^^^^^^^^^^^^^
